--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -27,16 +27,26 @@ jobs:
         run: docker compose -f docker-compose.test.yml down -v
 
       # отправляем уведомление в телеграм при падении тестов
-      - name: Notify Telegram (tests failed)
-        if: failure()
+      - name: Notify Telegram
+        if: ${{ always() }}  # гарантирует выполнение шага независимо от результатов тестов
         env:
-          BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+            BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+            CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          MESSAGE="❌ CI: pytest failed on repo $GITHUB_REPOSITORY (branch: $GITHUB_REF)"
-          curl -s -X POST "https://api.telegram.org/bot${BOT_TOKEN}/sendMessage" \
+            # Определяем статус job
+            if [[ "${{ job.status }}" == "success" ]]; then
+            EMOJI="✅"
+            else
+            EMOJI="❌"
+            fi
+
+            MESSAGE="$EMOJI CI: pytest ${{ job.status }} on repo $GITHUB_REPOSITORY (branch: $GITHUB_REF)"
+            
+            # Отправляем сообщение в Telegram
+            curl -s -X POST "https://api.telegram.org/bot${BOT_TOKEN}/sendMessage" \
             -d chat_id="${CHAT_ID}" \
             -d text="$MESSAGE"
+
 
 #   deploy:
 #     name: Deploy to server
